--- a/sass/1_base_html/_main.scss
+++ b/sass/1_base_html/_main.scss
@@ -11,4 +11,5 @@ html {
 body {
   color: $font-color;
   font-family: $font-family;
+  line-height: $line-height;
 }
